  on the gretl command line, then cancel the import
- Fix bug: X-Y plot with "factor separation" went wrong in
  some cases (spotted by Ignacio Diaz-Emparanza)
- Fix bug: weighted least squares with a dummy variable for
  the weight crashed gretl when using QR decomposition
- Fix bug: a syntactically incorrect "genr" expression could
  lead to a crash (thanks to Steve Walesch for spotting this)

1/22/2004 version 1.2.1
- Add Cristian Rigamonti's Italian translation
- More flexible and general support for collections of data
  files or script files
- Add support for the data files from Davidson & MacKinnon,
  Econometric Theory and Methods (ETM)
- Make the NIST linear regression test suite available via a
  plugin
- Add ARMA model to the variable menu (plus "arma" command)
  (thanks to Jack Lucchetti)
- Fix bugs with displaying a TSLS model in the GUI program
- Fix bug in display of actual, fitted and residuals in GUI
  program
- Fix occasional bug in copying data to clipboard as CSV
- Add a mechanism for configuring gretl as a networked
  application under Windows
- Small fixes for data importation 
- Don't overwrite CSV datafiles with gretl format data
- Add a logistic model command and menu item
- Fixes for reading of recent RATS databases (thanks to John
  Frain for a useful bug report)
- Some updates to the manual and help files
- Enhanced LaTeX equation output (thanks to Alan Isaac for the
  suggestion)
- Fixes for several nameless bugs
- Various GUI tweaks

12/14/2003 version 1.2.0
- add "rename" command (rename a variable)
- add "printf" command for generating formatted output
- "delete" command: add the ability to delete specified
  variables, identified by name or number
- add "eval" command: syntax as in a "genr" formula; the
  result of calculation (or retrieval) is printed then
  discarded, not added to the data set as with genr
- Replace the internal workings of "genr" so that it can
  calculate dynamically (e.g. "genr y = .6*y(-1) + u"),