@@ -1079,15 +1079,19 @@ void set_sample_label (DATAINFO *pdinfo)
     gtk_label_set_text(GTK_LABEL(mdata->status), labeltxt);
 
     if (strlen(paths.datfile) > 2) {
-	if (strrchr(paths.datfile, SLASH) == NULL)
+	if (strrchr(paths.datfile, SLASH) == NULL) {
 	    sprintf(labeltxt, " %s ", paths.datfile);
-	else
-	    sprintf(labeltxt, " %s ", 
-		    strrchr(paths.datfile, SLASH) + 1);
-	if (data_status & MODIFIED_DATA) 
+	} else {
+	    sprintf(labeltxt, " %s ", strrchr(paths.datfile, SLASH) + 1);
+	}
+	if (data_status & MODIFIED_DATA) {
 	    strcat(labeltxt, "* ");
-	if (datalabel != NULL)
+	} else if (data_status & GZIPPED_DATA) {
+	    strcat(labeltxt, "[z] ");
+	}
+	if (datalabel != NULL) {
 	    gtk_label_set_text(GTK_LABEL(datalabel), labeltxt);
+	}
     } 
     else if (data_status & MODIFIED_DATA) {
 	strcpy(labeltxt, _(" Unsaved data "));
@@ -1927,8 +1931,9 @@ static void auto_store (void)
 
     /* if there's already a datafile, and it's gzipped, then
        arrange for the new store to be gzipped too */
-    if (strlen(paths.datfile) && is_gzipped(paths.datfile))
+    if (strlen(paths.datfile) && is_gzipped(paths.datfile)) {
 	oflag = OPT_Z;
+    }
 
     if ((data_status & USER_DATA) && native_datafile()) {
 	do_store(paths.datfile, oflag, 1);
