@@ -248,7 +248,8 @@ enum data_status {
     USER_DATA     = 1 << 2,
     IMPORT_DATA   = 1 << 3,
     GUI_DATA      = 1 << 4,
-    MODIFIED_DATA = 1 << 5
+    MODIFIED_DATA = 1 << 5,
+    GZIPPED_DATA  = 1 << 6
 };
 
 enum drag_types {
